--- a/LocalAI.NET.LMStudio/LocalAI.NET.LMStudio.csproj
+++ b/LocalAI.NET.LMStudio/LocalAI.NET.LMStudio.csproj
@@ -8,13 +8,13 @@
         <!-- Package Info -->
         <PackageId>LocalAI.NET.LMStudio</PackageId>
         <Title>LocalAI.NET.LMStudio</Title>
-        <Version>1.0.2</Version>
+        <Version>1.1.0</Version>
         <Authors>Dan Clipca</Authors>
         <Company>Sponge Engine</Company>
-        <Description>A .NET client library for LMStudio, providing a simple and efficient way to interact with LMStudio's text generation capabilities in your .NET applications. This library offers support for both LM Studio's native API and its OpenAI-compatible endpoints. This package serves as the LM Studio integration layer for the LocalAI.NET ecosystem.</Description>
+        <Description>A .NET client library for LMStudio, providing a simple and efficient way to interact with LMStudio's text generation capabilities in your .NET apps. Support for the native API LMStudio and its OpenAI-compatible endpoints. This library serves as the LM Studio integration layer for the LocalAI.NET ecosystem.</Description>
 
         <!-- Package Details -->
-        <PackageTags>llm, ai, openai, localai, lm-studio, local-llm, offline-ai, self-hosted-ai, llama, gpt, neural-network, machine-learning, 
+        <PackageTags>llm, ai, openai, localai, lm-studio, local-llm, offline-ai, self-hosted-ai, llama, gpt
         text-generation, completion, chat, dotnet, csharp, cross-platform</PackageTags>
         <PackageProjectUrl>https://github.com/SpongeEngine/LocalAI.NET.LMStudio</PackageProjectUrl>
         <RepositoryUrl>https://github.com/SpongeEngine/LocalAI.NET.LMStudio</RepositoryUrl>
