--- a/SpongeEngine.LMStudioSharp/SpongeEngine.LMStudioSharp.csproj
+++ b/SpongeEngine.LMStudioSharp/SpongeEngine.LMStudioSharp.csproj
@@ -8,7 +8,7 @@
         <!-- Package Info -->
         <PackageId>SpongeEngine.LMStudioSharp</PackageId>
         <Title>LMStudioSharp</Title>
-        <Version>1.1.0</Version>
+        <Version>1.2.0</Version>
         <Authors>Dan Clipca</Authors>
         <Company>Sponge Engine</Company>
         <Description>A .NET client library for LMStudio, providing a simple and efficient way to interact with LMStudio's text generation capabilities in your .NET apps. Support for the native API LMStudio and its OpenAI-compatible endpoints. This library serves as the LM Studio integration layer for the LocalAI.NET ecosystem.</Description>
@@ -33,7 +33,6 @@
 
     <!-- Package Dependencies -->
     <ItemGroup>
-        <PackageReference Include="Betalgo.Ranul.OpenAI" Version="9.0.1" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" Condition="'$(TargetFramework)' == 'net6.0'" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" Condition="'$(TargetFramework)' == 'net7.0'" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
@@ -42,7 +41,8 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" Condition="'$(TargetFramework)' == 'net7.0'" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="Polly" Version="8.5.0" />
+        <PackageReference Include="Polly" Version="8.5.1" />
+        <PackageReference Include="SpongeEngine.LLMSharp.Core" Version="1.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
