--- a/SpongeEngine.LMStudioSharp/SpongeEngine.LMStudioSharp.csproj
+++ b/SpongeEngine.LMStudioSharp/SpongeEngine.LMStudioSharp.csproj
@@ -40,14 +40,16 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" Condition="'$(TargetFramework)' == 'net6.0'" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" Condition="'$(TargetFramework)' == 'net7.0'" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Polly" Version="8.5.1" />
-        <PackageReference Include="SpongeEngine.LLMSharp.Core" Version="1.1.1" />
+        <PackageReference Include="SpongeEngine.LLMSharp.Core" Version="1.1.2" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
     <!-- Include README in the package -->
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Client\" />
     </ItemGroup>
 </Project>
