--- a/SpongeEngine.LMStudioSharp.Tests/SpongeEngine.LMStudioSharp.Tests.csproj
+++ b/SpongeEngine.LMStudioSharp.Tests/SpongeEngine.LMStudioSharp.Tests.csproj
@@ -4,6 +4,7 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <TargetFrameworks>net8.0;net6.0;net7.0</TargetFrameworks>
+        <Version>0.3.8.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
